# sway-draw

./: Architecture.md  Cargo.toml  GEMINI.md  README.md
.github/workflows/: release.yml  rust.yml
src/: draw.rs  main.rs  state.rs  types.rs
webpage/: index.html  script.js  style.css
