[package]
name = "sway-draw"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
smithay-client-toolkit = "0.20.0"
tiny-skia = "0.12.0"
resvg = "0.47.0"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["client", "staging"] }
wayland-protocols-wlr = "0.3.10"
